JS Exceptions can overflow BufBuilder

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.3.14
    • Affects Version/s: 3.3.12
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • Hide

      var len = 65 * 1024 * 1024;
      var str = new Array(len + 1).join( 'b' );
      throw str;

      Show
      var len = 65 * 1024 * 1024; var str = new Array(len + 1).join( 'b' ); throw str;
    • Platforms 2016-09-19
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      BufBuilder has a limit of 64MB. If this limit is hit, an unexpected exception is thrown. The code to process JS exceptions needs to not overflow the BufBuilder.

            Assignee:
            Mark Benvenuto
            Reporter:
            Mark Benvenuto
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: