SERVER-25895 JS Exceptions can overflow BufBuilder